<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/activity_phq9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        tools:context=".ui.bipolar.bipolarActivity">

        <TextView
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/bipOvr"
            android:textAllCaps="false"
            android:textColor="#4CAF50"
            android:textColorHighlight="#4CAF50"
            android:textColorHint="#4CAF50"
            android:textColorLink="#4CAF50"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:autoSizeTextType="uniform"
            android:text="@string/bipQ1"
            android:textAllCaps="false"
            android:textColor="#4CAF50"
            android:textColorHighlight="#4CAF50"
            android:textColorHint="#4CAF50"
            android:textColorLink="#3F51B5"
            android:textSize="22sp" />

        <Button
            android:id="@+id/choiceA"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#4CAF50"
            android:text="@string/bipA1"
            android:textAllCaps="false"
            android:textColor="#0E0C0E"
            android:textColorHighlight="#120E12"
            android:textColorHint="#0C0A0C"
            android:textColorLink="#050405"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/questions" />

        <Button
            android:id="@+id/choiceB"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#4CAF50"
            android:text="@string/bipA2"
            android:textAllCaps="false"
            android:textColor="#100D10"
            android:textColorHighlight="#100C10"
            android:textColorHint="#0E0A0E"
            android:textColorLink="#120C11"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceA" />

        <Button
            android:id="@+id/choiceC"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#4CAF50"
            android:text="@string/bipA3"
            android:textAllCaps="false"
            android:textColor="#0B080A"
            android:textColorHighlight="#090809"
            android:textColorHint="#0C090C"
            android:textColorLink="#120D11"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceB" />

        <Button
            android:id="@+id/choiceD"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#4CAF50"
            android:text="@string/bipA4"
            android:textAllCaps="false"
            android:textColor="#120B11"
            android:textColorHighlight="#100B10"
            android:textColorHint="#070407"
            android:textColorLink="#0E080E"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceC" />

        <Button
            android:id="@+id/choiceE"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#4CAF50"
            android:text="@string/bipA5"
            android:textAllCaps="false"
            android:textColor="#1B111A"
            android:textColorHighlight="#0C070C"
            android:textColorHint="#150C15"
            android:textColorLink="#170D16"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceD" />

        <Button
            android:id="@+id/choiceF"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#4CAF50"
            android:text="@string/bipA6"
            android:textAllCaps="false"
            android:textColor="#130F13"
            android:textColorHighlight="#170F17"
            android:textColorHint="#1E141D"
            android:textColorLink="#130C13"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/choiceE" />

    </LinearLayout>
</ScrollView>